refactor: 정적 팩토리 메서드 패턴 적용